--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -17,6 +17,10 @@ nlu:
     - goodevening
     - good afternoon
 
+- intent: nirvana
+  examples: |
+    - what is nirvana?
+
 - intent: goodbye
   examples: |
     - cu
@@ -89,3 +93,6 @@ nlu:
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
+
+
+
