--- a/domain.yml
+++ b/domain.yml
@@ -8,6 +8,7 @@ intents:
   - mood_great
   - mood_unhappy
   - bot_challenge
+  - nirvana
 
 responses:
   utter_greet:
@@ -28,6 +29,9 @@ responses:
 
   utter_iamabot:
   - text: "I am a bot, powered by Rasa."
+
+  utter_nirvana:
+    - text: "asidfnaudjfghnai"
 
 session_config:
   session_expiration_time: 60
