--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,13 @@ assistant_id: 20241125-183500-oily-rectangle
 # https://rasa.com/docs/rasa/nlu/components/
 language: pt
 
-pipeline: null
+pipeline:
+- name: ResponseSelector
+  epochs: 100
+  retrieval_intent: faq
+- name: ResponseSelector
+  epochs: 100
+  retrieval_intent: chitchat
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
 # # If you'd like to customize it, uncomment and adjust the pipeline.
 # # See https://rasa.com/docs/rasa/tuning-your-model for more information.
