--- a/config.yml
+++ b/config.yml
@@ -43,6 +43,12 @@ pipeline:
 # https://rasa.com/docs/rasa/core/policies/
 policies:
   - name: RulePolicy
+  - name: ResponseSelector
+    epochs: 100
+    retrieval_intent: faq
+  - name: ResponseSelector
+    epochs: 100
+    retrieval_intent: chitchat
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
