--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -1,7 +1,10 @@
 version: "3.1"
 
 rules:
-
+- rule: Comprimenta o usuario e se apresenta
+  steps:
+  - intent: saudacao
+  - action: utter_saudacao
 
 - rule: Se despede sempre que o usuario se despedir
   steps:
