--- a/domain/onibus.yml
+++ b/domain/onibus.yml
@@ -2,16 +2,27 @@ version: "3.1"
 
 responses:
   faq/onibus:
-  - text: 
+  - text: |
+      Os ônibus terceirizados da UFC são de uso exclusivo dos estudantes da UFC. Ao entrar no veículo, será necessário mostrar ao motorista algum documento que comprove o vínculo estudantil com a instituição e documento oficial com foto, para identificação
+      
+      Os ônibus só pararão em pontos preestabelecidos;
+      O ônibus da UFC transitará dentro do limite da capacidade máxima de passageiros prevista em legislação;
+      O ônibus do Campus ficará com uso exclusivo para visitas técnicas.
+
+      Os horários: https://www.quixada.ufc.br/wp-content/uploads/2024/07/SITE-Post-Onibus-Campus-04-1-1024x1024.jpg
+  faq/pontos_onibus:
+    - text: "Image: https://www.quixada.ufc.br/wp-content/uploads/2024/02/Rota-Retorno-Campus_Rodoviaria.png"
+  faq/site_onibus:
+    -text: "Link: https://www.quixada.ufc.br/itinerario-dos-onibus/"
   faq/quando_passa_os_onibus_do_ifce:
-  - text: 
+  - text: "TODO o site do IFCE caiu"
   faq/onibus_ifce:
-  - text: 
+  - text: "Sim, mas é preferível ir nos ônibus da UFC."
   faq/qual_o_onibus_roxo:
-  - text: 
+  - text: Ele é o ônibus A.
   faq/qual_o_onibus_cinza:
-  - text: 
+  - text: Ele é o ônibus B.
   faq/qual_o_onibus_do_ifce:
-  - text: 
+  - text: É o azul e o  amarelo. Também chamado de Ônibus PMQ (Prefeitura Municipal de Quixadá)
   faq/onibus_quebra:
-  - text: 
+  - text: Se ele quebrar perto da Universidade ou pelo Quixadá os alunos vão a pé. Caso quebre no meio do caminho. Eles normalmente enviam outro ônibus.
