--- a/domain/ru.yml
+++ b/domain/ru.yml
@@ -2,42 +2,53 @@ version: "3.1"
 
 responses:
   faq/o_que_e_o_ru:
-  - text: 
+  - text: O Restaurante Universitário tem como objetivo ofertar refeições balanceadas e de qualidade, além de constituir um espaço de convivência e integração da comunidade universitária.
   faq/solicitar_cartao:
-  - text: 
+  - text: "Não tem uma etapa de solicitação: o nome deve aparecer no sistema para que possa ser entregue. É preciso apenas que o discente ou servidor se identifique no guichê portando um documento oficial com foto (RG, CNH, entre outras)."
   faq/segunda_via:
-  - text: 
+  - text: "Para segunda via do cartão do RU: ver a página Gerar GRU segunda via ; conferir Normas para Uso do Cartão."
   faq/quem_pode_solicitar:
-  - text: 
+  - text: "Alunos regularmente matriculados e servidores docentes e técnico-administrativos da UFC."
   faq/eh_gratuito:
-  - text: 
+  - text: "A primeira via é gratuita. Para obter a segunda via é necessário pagar uma taxa de R$8,00. Caso o cartão não tenha sido roubado e nem possuir defeito."
   faq/valor_da_refeicao:
-  - text: 
+  - text: |
+    Para estudante: R$ 1,10
+    Servidor Técnico-Administrativo: R$ 13,50
+    Servidor Docente: R$ 13,50
+    Visitante: R$ 13,50
+    Participante de evento pagante: R$ 6,00 
   faq/ruquem_pode_acessar:
-  - text: 
+  - text: "Somente quem tem vínculo com a UFC. Ou seja: alunos regularmente matriculados, servidores docentes e técnico-administrativos da UFC e funcionários terceirizados."
   faq/quantidade_maxima_de_creditos_no_cartao:
-  - text: 
+  - text: Sim, o cartão só comporta 50 tíquetes por vez.
   faq/cardapio:
-  - text: 
+  - text: "O cardapio é atualizado semanalmente. Link: https://www.ufc.br/restaurante/cardapio/5-restaurante-universitario-de-quixada"
   faq/o_ru_funciona:
-  - text: 
+  - text: "A pessoa com vínculo com a UFC. Vai para a fila, a esquerda, apresenta o cartão do RU coloca sua comida e se alimenta dentro do RU. Não podendo levar a comida para comer fora dele"
   faq/como_faco_segunda_via:
-  - text: 
+  - text: "Vá no guichê do RU e use o site: https://si3.ufc.br/public//jsp/restaurante_universitario/consulta_comensal_2_via_cartao_ru.jsf"
   faq/nutricionista:
-  - text: 
+  - text: "Nome da Nutricionista, sala"
   faq/esqueci_agendar:
-  - text: 
+  - text: "Provavelmente você ainda vai ter a refeição, porêm vai ficar mais tempo esperando."
   faq/esqueci_o_cartao:
-  - text: 
+  - text: "Tente ir atrás do cartão. Não tem como comer mesmo sabendo dos números do cartão."
   faq/site_do_ru:
-  - text: 
+  - text: "Link: https://www.quixada.ufc.br/restaurante-universitario/"
   faq/como_funciona_o_agendamento:
-  - text: 
+  - text: |
+      Acesse: https://si3.ufc.br/sigaa
+      Clique em Restaurante Universitário > Agendar Horário
+      Escolha a data, tipo de refeição e horário
+      Aperte em Cadastrar Agendamento
+
+      - É possível realizar o cancelamento do agendamento caso não possa ou desista de comparecer.
   faq/quanto_custa_o_cartao:
-  - text: 
+  - text: A primeira via é gratuita.
   faq/quanto_custa_segunda_via_do_cartao:
-  - text: 
+  - text: A segunda via custa R$ 8,00 reais.
   faq/meu_cartao_deu_defeito:
-  - text: 
+  - text: Em caso de defeito inerente ao cartão uma segunda via gratuita será disponibilizada mediante apresentação do cartão anterior. É considerado defeito inerente ao cartão aquele apresentado até 7 (sete) dias úteis do recebimento do cartão.
   faq/posso_emprestar_o_cartão:
-  - text: 
+  - text: O cartão é para uso exclusivo do usuário cadastrado. Em caso de uso por terceiros, o cartão poderá ser apreendido e o usuário deverá responder pelo fato.
